# streamlit_movie_recommendation

./: .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
data/dataframes/: frequency_genres.pkl  genome-scores.parquet  genome-tags.parquet  genre_ratings.parquet.gzip  links.parquet  movies.parquet  ratings.parquet  tags.parquet  user_rating_avg.parquet.gizp  user_rating_sum.parquet.gizp
data/models/: surp_cv_results.json  surp_metrics_default_models.pkl  surp_precision_at_k_recall_at_k.json
notebooks/: Dataprep.ipynb  Embedding_data.ipynb  ML_all_features.ipynb  ML_find_hypterparameters.ipynb  ML_report2.ipynb  Visualizing data.ipynb  data_exploration.py  model_surprise.ipynb  model_surprise_GridSearch.ipynb  model_surprise_cross_validation.ipynb  model_surprise_evaluation.ipynb  model_user_item_based_filtering.ipynb  movie_genre_plots.ipynb  plots_surprise_evaluation.ipynb  plots_users_ratings.ipynb  plots_users_tags.ipynb  send_status_mail.py  surprise_playground.ipynb
streamlit_app/: streamlit_presentation.py
streamlit_app/sites/: about.py  conclusion.py  data_exploration.py  data_preprocessing.py  intro.py  models_advanced.py  models_classical.py  results.py
