[tool.poetry]
name = "streamlit-copy"
version = "0.1.0"
description = ""
authors = ["Lena <wanderfalke@posteo.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tensorflow = "^2.16.1"
tensorflow-intel = "^2.16.1"
scikit-learn = "^1.5.0"
streamlit = "^1.36.0"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
plotly = "^5.22.0"
python-dotenv = "^1.0.1"
scikit-surprise = "^1.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
